--- a/TestConsoleEnviorment/TestConsoleEnviorment.csproj
+++ b/TestConsoleEnviorment/TestConsoleEnviorment.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BudgetCalculator\BudgetCalculator.csproj" />
+    <ProjectReference Include="..\BudgetCalculatorTests1\BudgetCalculatorTests1.csproj" />
   </ItemGroup>
 
 </Project>
